# crada

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python/crada/: __init__.py
src/: lib.rs
